# cicd_test01

.github/workflows/: python-app.yml
src/: calculate.py  pyproject.toml  requirements.txt
tests/: test_calculate.py
