[tool.poetry]
name = "github-cicd-example01"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "github_cicd_example01"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
